prevent page from scrolling when nav is open on ios

--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -22,11 +22,14 @@ body {
   font-size: $base-font-size;
 }
 
-html,
-body {
-  &.is-active {
-    overflow: hidden;
-    height: 100%;
+@include mq($until: m) {
+  html,
+  body {
+    &.is-active {
+      height: 100vh;
+      overflow: hidden;
+      position: relative;
+    }
   }
 }
 
